FIxed Deepwell UI

--- a/app/views/deep_wells/index.html.erb
+++ b/app/views/deep_wells/index.html.erb
@@ -11,9 +11,9 @@
             </div>
             <div class="col">
                 <br>
-                <%= f.submit "Search", class:"btn btn-outline-primary text-center" %>
+                <%= f.submit "Search", class:"btn btn-primary text-center" %>
                 <% if @current_client_deep_wells.count > @deep_wells.count %>
-                <%= link_to "Reset Search", request.path, class:"btn btn-outline-secondary" %>
+                    <%= link_to "Reset Search", request.path, class:"btn btn-secondary" %>
                 <br><br>
                 <% end %>
             </div>
@@ -56,7 +56,7 @@
         <%== pagy_bootstrap_nav(@pagy) %>
         <% end %>
         <div style="float:end; padding-bottom: 10px;">
-            <%= link_to 'New Deep Well', new_client_deep_well_path, class:"btn btn-outline-primary" %>
+            <%= link_to 'New Deep Well', new_client_deep_well_path, class:"btn btn-primary" %>
             <%= link_to 'Back', island_clients_path(@backclient), class:"btn btn-light"%>
         </div>
     </div>
