--- a/app/views/deep_wells/show.html.erb
+++ b/app/views/deep_wells/show.html.erb
@@ -235,7 +235,7 @@
   <!-- Deepwell Design Proposal End-->
 
   <div style="float:right">
-        <%= link_to 'Edit', edit_client_deep_well_path([@client, @deep_well]), class: "btn btn-outline-primary" %> 
+        <%= link_to 'Edit', edit_client_deep_well_path([@client, @deep_well]), class: "btn btn-primary" %> 
         <%= link_to 'Back', [@client, :deep_wells], class: "btn btn-light" %>
     <br>
   </div>
