--- a/app/views/devise/invitations/new.html.erb
+++ b/app/views/devise/invitations/new.html.erb
@@ -6,7 +6,7 @@
 
     <% resource.class.invite_key_fields.each do |field| -%>
       <div class="field">
-        <%= f.label "Enter User Email Here:"%><br />
+        <%= f.label "Please enter User Email Here:"%><br />
         <%= f.text_field field, class: "form-control" %>
         <br>
       </div>
@@ -15,7 +15,7 @@
       <%= link_to "Back", :back, class: 'btn btn-light'%>
     </div>
     <div class="actions" style="float:right;">
-       <%= f.submit t("devise.invitations.new.submit_button"), class: 'btn btn-outline-primary' %>&nbsp;
+       <%= f.submit t("devise.invitations.new.submit_button"), class: 'btn btn-primary' %>&nbsp;
     </div>
   <% end %>
 </div>
