--- a/app/views/two_factor_settings/new.html.erb
+++ b/app/views/two_factor_settings/new.html.erb
@@ -17,13 +17,13 @@
             <% end %>
             <%= f.input :password, label: false, placeholder: "Password"%>
             <div style="float:left; margin-top: 10px;">
-                <%= f.submit 'Enable Two Factor Authentication', class: 'btn btn-outline-success' %>
+                <%= f.submit 'Enable Two Factor Authentication', class: 'btn btn-success' %>
             </div>
             <% end %>
             <div class="row">
                 <div class="col-md-12">
                     <div class="d-grid gap-2 d-md-flex justify-content-md-end" style="margin-top: 10px;">
-                        <%= link_to "Cancel", :back, class:'btn btn-outline-danger' %>
+                        <%= link_to "Cancel", :back, class:'btn btn-danger' %>
                     </div>
                 </div>
             </div>
