Added Units for Measurement (TOTAL DEPTH).
Water Limit is still ongoing.

--- a/app/views/deep_wells/show.html.erb
+++ b/app/views/deep_wells/show.html.erb
@@ -78,6 +78,7 @@
           <td>
             <strong>TOTAL DEPTH:</strong>
             <%= @deep_well.depthTotal%>
+            <%= @deep_well.units%>
           </td>
         </tr>
         <tr>
