--- a/app/views/audit_logs/index.html.erb
+++ b/app/views/audit_logs/index.html.erb
@@ -2,6 +2,15 @@
     <!-- <p id="notice"><%= notice %></p> -->
     <h1>System Audit Logs</h1>
     <!-- Search Form Start -->
+
+    <!-- Danger Alert for when Audit Logs is nearing 10,000 logs-->
+    <% if AuditLog.count > 10000  %>
+        <div class="alert alert-danger" role="alert">
+          Audit logs is greater than 10,000! Please save a copy of the System Audit Logs now.
+        </div>
+    <% end %>
+
+
     <p>
         <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
             Search and Filter
