--- a/app/views/deep_wells/_form.html.erb
+++ b/app/views/deep_wells/_form.html.erb
@@ -49,10 +49,10 @@
                     <%= form.text_field :depthTotal, class:"form-control" %>
                 </div>
                 <div class="col">
-                    <%= form.select :units, options_for_select([['Kilometer', 'km'], ['Meter', 'm'], ['Centimeter', 'cm'],
+                    <%= form.select :depthTotalUnits, options_for_select([['Kilometer', 'km'], ['Meter', 'm'], ['Centimeter', 'cm'],
                                                   ['Millimeter', 'mm'], ['Yard', 'yd'], ['Foot', 'ft'],
                                                   ['Inch', 'in']],
-                                                  (@deep_well.units)), { include_blank: 'Select Unit'}, class: "form-control form-select" %>
+                                                  (@deep_well.depthTotalUnits)), { include_blank: 'Select Unit'}, class: "form-control form-select" %>
                 </div>
             </div>
         </div>
@@ -83,10 +83,10 @@
                                 <%= form.text_field :limit , class:"form-control"%>
                 </div>
                 <div class="col">
-                    <%= form.select :units, options_for_select([['Kilometer', 'km'], ['Meter', 'm'], ['Centimeter', 'cm'],
+                    <%= form.select :waterLimitUnits, options_for_select([['Kilometer', 'km'], ['Meter', 'm'], ['Centimeter', 'cm'],
                                                   ['Millimeter', 'mm'], ['Yard', 'yd'], ['Foot', 'ft'],
                                                   ['Inch', 'in']],
-                                                  (@deep_well.units)), { include_blank: 'Select Unit'}, class: "form-control form-select" %>
+                                                  (@deep_well.waterLimitUnits)), { include_blank: 'Select Unit'}, class: "form-control form-select" %>
                 </div>
             </div>
 
