--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -25,7 +25,7 @@ nav li {  /* active case */
                     <%= link_to_unless_current "Home", root_path, class:"nav-link" %>
                 </li>
                 <li class="nav-item">
-                    <%= link_to_unless_current "Archive", archives_path, class:"nav-link" %>
+                    <%= link_to_unless_current "Archive", archive_path, class:"nav-link" %>
                 </li>
                 <% if current_user && current_user.role == "admin" || current_user.role == "super admin" %> 
                 <li class="nav-item">
