--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -56,6 +56,7 @@
         </div>
     </div>
     <br>
+    <% if current_user.role == "admin" || current_user.role == "super admin" %>
     <div class="card" style="width: auto;">
         <div class="card-body">
             <h5 class="card-title">Two Factor Authentication</h5>
@@ -73,6 +74,7 @@
             <% end %>
         </div>
     </div>
+    <% end %>
     <br />
 
     <br />
