--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -18,7 +18,7 @@
   <br>
   <div class="actions" style="float:right">
     <%= form.submit :Submit, class: 'btn btn-primary'%>
-    <%= link_to 'Back', island_clients_path, class:"btn btn-light" %>
+    <%= link_to 'Back', region_clients_path, class:"btn btn-light" %>
   </div>
 
 <% end %>
