--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -10,5 +10,5 @@
   <%= @client.island_id %>
 </p>
 
-<%= link_to 'Edit', edit_island_client_path([@island, @client]) %> |
+<%= link_to 'Edit', edit_region_client_path([@region, @client]) %> |
 <%= link_to 'Back', [@island, :clients] %>
