--- a/app/views/deep_wells/edit.html.erb
+++ b/app/views/deep_wells/edit.html.erb
@@ -7,7 +7,7 @@
     	<%= link_to "Back", :back, class: 'btn btn-light' %>
   	</div>
 
-  	<!-- island_client_path -->
+  	<!-- region_client_path -->
   
 
 </div>
