--- a/app/views/deep_wells/index.html.erb
+++ b/app/views/deep_wells/index.html.erb
@@ -57,7 +57,7 @@
         <% end %>
         <div style="float:end; padding-bottom: 10px;">
             <%= link_to 'New Deep Well', new_client_deep_well_path, class:"btn btn-primary" %>
-            <%= link_to 'Back', island_clients_path(@backclient), class:"btn btn-light"%>
+            <%= link_to 'Back', region_clients_path(@backclient), class:"btn btn-light"%>
         </div>
     </div>
 </div>
