--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -1,5 +1,5 @@
 
-<%= form_with(model: [@island, client], local: true) do |form| %>
+<%= form_with(model: [@region, client], local: true) do |form| %>
   <% if client.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(client.errors.count, "error") %> prohibited this client from being saved:</h2>
